# s2017

./: .gitignore  .gitmodules  LICENSE.md  PKGBUILD  README.md  cam.param  getSimulated.sh  interesting.txt  kinect_cam_params_640x480_2.param  linuxnet.txt  macnet.txt  notes.txt  openni_basics.txt  pipeline.sh  pipeline.sh.old  quickfixes.sed  setup_path.sh  simpleQueue.sh  testdata.sh  todo.txt  todone.txt  windows_bins.sh
cam_params/: kinect_cam_params.param  kinect_cam_params_640x480.param  kinect_cam_params_640x480_mirrored.param  struct_1.param
dataset/: get_data.sh
ex_initalize/: Scanner.cpp  Scanner.h  Utilities.cpp  Utilities.h  a.out  compile.sh  main.cpp
freenect2/: applyDistort.cpp  make.sh
misc/: gdfstool_metaoptmia_shared_creds.gpg  xcodeKeys.tar.xz.gpg
misc/progs/ex_initalize/: main.cpp
misc/progs/newNI/: CMakeLists.txt
misc/progs/newNI/src/: Scanner.cpp  Scanner.h  main.cpp
misc/progs/simpleNI/: cmake
misc/progs/template/: CMakeLists.txt
notes/: BC_NOTES  StructureSDK.txt  bins_on_windows.txt  notes.txt  openNI2.txt  pcl.txt  pipeline.txt  setup.txt  uv_remapping.tex  winblows.sh
notes/spcl/: matcher.txt  matcher.txt.mainbranch  matcher2.txt
oni_stuff/converter/: Depth.cpp
oni_stuff/converter.old/: CMakeLists.txt
oni_stuff/ni1Recorder/: ni1Recorder.cpp
oni_stuff/ni2Recorder/: ni2Recorder.cpp
oni_stuff/simpleReader/: main.cpp
oni_stuff/simpleReader1/: ni1Reader.cpp
oni_stuff/simpleRecorder2/: CMakeLists.txt  ni2Recorder.cpp
pclCapture/: CMakeLists.txt
pclCapture/src/: main.cpp
pcl_apply_transform/: CMakeLists.txt  main.cpp  pcdMerge.cpp  pcdTransfrom.cpp
setup/: .gitignore  README.md  pacman.sh  pacman_installs.sh  setup.sh  setup_dirs.sh  submodules.sh
setup/flann/: PKGBUILD
setup/g2o/: PKGBUILD
setup/pcl/: PKGBUILD
simpleNI/: CMakeLists.txt
template/: CMakeLists.txt
template/src/: main.cpp
utils/: CMakeLists.txt  er_helper.h  goSorter.cpp  local_to_global.cpp  pcdTransfrom.cpp  traj_inverse.cpp
